--- a/gamer.html
+++ b/gamer.html
@@ -5,9 +5,26 @@
 	<link rel="stylesheet" type="text/css" href="gamer.css">
 </head>
 <body>
-	<button class="players">Assign Players</button>
-	<img class="chaves" src="man-1.jpg">
-	<img class="prof" src="man-2.jpg">
+	<header class='center'>
+		<p class='intro'>This is Rock Paper Scissors Played Chaves Style.<br>Players will be assigned a random character from <em>Chaves</em><br>You only need to push the <b><button class="playOn">Play</button></b> button to play<br>Best out of 7 wins!</p>
+		<button class="players">Begin</button>
+		
+	</header>
+	 
+	<div>
+            <div class="player-1-panel">
+                <div class="player-name"><img class="chaves" src="man-1.jpg"><br>Player 1</div>
+                <div class="player-score" id="score-1">2</div>
+            </div>
+            
+            <div class="player-2-panel">
+                <div class="player-name"><img class="prof" src="man-2.jpg"><br>Player 2</div>
+                <div class="player-score" id="score-2">1</div>
+            </div>
+    </div>
+
+	
+   
 <script type="text/javascript" src="gamer.js"></script>
 </body>
 </html>
