--- a/gamer.html
+++ b/gamer.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 	<header class='center'>
-		<p class='intro'>This is Rock Paper Scissors Played Chaves Style.<br>Players will be assigned a random character from <em>Chaves</em><br>You only need to push the <b><button class="playOn">Play</button></b> button to play<br>Best out of 7 wins!</p>
-		<button class="players">Begin</button>
+		<p class='intro'>This is Rock Paper Scissors Played Chaves Style.<br>Players will be assigned a random character from <em>Chaves</em><br>
+        Don't like your player? <button class="players">Click Here</button> to get a new random selection<br> You only need to push the <b><button class="playOn">Play</button></b> button to play. First to 7 wins!</p>
+		
 		
 	</header>
 	 
@@ -15,13 +16,13 @@
             <div class="player-1-panel">
                 <div class="player-name"><img class="chaves" src="man-1.jpg"><br>Player 1</div>
                 <div class="player-score" id="score-1">2</div>
-                <div><img class="paper" src="piece-2.png"></div>
+                <div><img class="rock" src="piece-2.png"></div>
             </div>
             
             <div class="player-2-panel">
                 <div class="player-name"><img class="prof" src="man-2.jpg"><br>Player 2</div>
                 <div class="player-score" id="score-2">1</div>
-                <div><img class="rock" src="piece-1.png"></div>
+                <div><img class="paper" src="piece-1.png"></div>
             </div>
     </div>
 
