--- a/gamer.html
+++ b/gamer.html
@@ -14,13 +14,13 @@
 	 
 	<div>
             <div class="player-1-panel">
-                <div class="player-name"><img class="chaves" src="man-1.jpg"><br>Player 1</div>
+                <div class="player-name"><img class="chaves" src="man-1.png"><br>Player 1</div>
                 <div class="player-score" id="score-1">2</div>
                 <div><img class="rock" src="piece-2.png"></div>
             </div>
             
             <div class="player-2-panel">
-                <div class="player-name"><img class="prof" src="man-2.jpg"><br>Player 2</div>
+                <div class="player-name"><img class="prof" src="man-2.png"><br>Player 2</div>
                 <div class="player-score" id="score-2">1</div>
                 <div><img class="paper" src="piece-1.png"></div>
             </div>
