--- a/gamer.html
+++ b/gamer.html
@@ -15,7 +15,7 @@
         
         <h2 class='intro'>This is Rock Paper Scissors Played <em>Chaves</em> Style.</h2>
         <h4 class="sub-intro">Choose your players then push play. 
-        <br>The first palyer to 7 wins!</h4>
+        <br>The first player to 7 wins!</h4>
         
     </header> 
         <div class="characters">
